fixed auth & add more condition to signup
